--- a/7.md
+++ b/7.md
@@ -47,7 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: youremailaddresshere
+      - name: 23f2003375@ds.study.iitm.ac.in
         run: echo "Hello, world!"
         
       - name: Display date
